# goit_python_web_hw_09

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
doc/: dotenv
docker_conf/mongodb/: Dockerfile
scripts/: docker_build_docker-compose.cmd  docker_build_image.cmd  docker_load.cmd  docker_run.cmd  docker_run_docker-compose.cmd  docker_run_hw09.cmd  docker_run_mongodb.cmd  docker_run_rabbitmq.cmd  docker_run_redis.cmd  docker_stop.cmd
src/hw09/: main.py  parse.py
src/hw09/database/: connect-pymongo.py  connect.py  models.py  search.py  seeds.py
src/hw09/database/json/: authors.json  quotes.json  quotes_authors.json  quotes_hw08.json  result.json
